After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672809 - commit to fix Bug 319981 removed "open with" on inode/directory
commit to fix Bug 319981 removed "open with" on inode/directory
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-25 16:41 UTC by Doug McMahon
Modified: 2012-03-26 15:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
view: ensure we show "Open with..." entries for folders (1.02 KB, patch)
2012-03-26 15:09 UTC, Cosimo Cecchi
committed Details | Review

Description Doug McMahon 2012-03-25 16:41:09 UTC
that commit also removed the ability to open dir. with anything other than nautilus.
Seems unnecessary to the resolution of that bug & removes a useful option for some users

commit 
http://git.gnome.org/browse/nautilus/commit/?id=b9c51fd4eb84a9f52ee4be1bf183fc516984130b
Comment 1 Cosimo Cecchi 2012-03-26 15:09:03 UTC
Created attachment 210632 [details] [review]
view: ensure we show "Open with..." entries for folders

This should fix it.
Comment 2 Cosimo Cecchi 2012-03-26 15:37:13 UTC
Attachment 210632 [details] pushed as c1551df - view: ensure we show "Open with..." entries for folders

Pushed for 3.4.0 with r-t approval.