view: ensure we show "Open with..." entries for folders

This is a regression from commit
b9c51fd4eb84a9f52ee4be1bf183fc516984130b

https://bugzilla.gnome.org/show_bug.cgi?id=672809